SF Primes/src/objects/DocusignAPI_Users__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>User Information which are used in the Docusign API calls</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>Account Id of the Docusign User</description>
        <label>AccountId</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratorKey__c</fullName>
        <description>Integrator Key of the Docusign Account</description>
        <label>IntegratorKey</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>User Id of the Docusign</description>
        <label>UserId</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DocusignAPI Users</label>
</CustomObject>